# vidarr

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  train.py  trainer.py
.github/workflows/: release.yml
examples/: analyze_training.py  binary_classification.py  multiclass_classification.py  run_inference.py
serc/vidarr/: main.py
src/vidarr/: __init__.py  checkpointing.py  dali.py  distill.py  inference.py  main.py  trace_analysis.py  trainer.py  utils.py
tests/: create_datatset.py  single_inference.py  test_optimizer.py  trace_analysis.py  upload.py
